--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="container text-center">
             <h2 class="display 3" id="sample">Produk</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, aperiam.
+                Berikut Adalah Contoh Produk Kami
             </p>
             <div class="row pt-4">
                 <div class="col-md-3">
@@ -98,7 +98,7 @@
         <div class="container text-center">
             <h2 class="display 3" id="contoh">Resep</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, aperiam.
+                Berikut Adalah Contoh Masakan Yang Cocok Dengan Produk Kami
             </p>
             <div class="row pt-4">
                 <div class="col-md-3">
@@ -117,7 +117,7 @@
                     <img src="img/r4.jpg" alt="" class="img-fluid rounded-circle">
                     <h3 class="text-center">Yakitori</h3>
                 </div>
-                <a href="#resep.html">
+                <a href="resep.html">
                     <button type="button" class="btn btn-light btn-lg mt-5">
                         Lihat Semua>>
                     </button>
