--- a/resep.html
+++ b/resep.html
@@ -59,7 +59,7 @@
         <div class="container text-center">
             <h1 class="display 3">RESEP</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, aperiam.
+                Resep-Resep Pilihan Kami Yang Bisa Anda Coba
             </p>
             <div class="row pt-4">
                 <div class="col-md-3">
