--- a/tentang.html
+++ b/tentang.html
@@ -57,19 +57,17 @@
     </div>
     <div class="container perihal">
         <h2 class="display-3 text-center">PERIHAL</h2>
-        <p class="text-center">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, obcaecati.
         </p>
         <div class="clearfix pt-5"><img src="img/tentang.jpg" alt="" class="col-md-6 float-md-end mb-3" width="300"
                 height="300">
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, natus?
+                Nama Saya Yusril Isra Mahendra Dari Prodi Teknik Informatika
             </p>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, natus?
+                Ini adalah Web Saos WIBU Yang Saya Buat Dengan Bootstrap 5
             </p>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, natus?
+                Web Ini Dibuat Untuk Memenuhi UTS Matakuliah Pemograman Web
             </p>
         </div>
     </div>
