--- a/produk.html
+++ b/produk.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#produk">Produk</a>
+                        <a class="nav-link active" aria-current="page" href="produk.html">Produk</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="resep.html">Resep</a>
@@ -59,7 +59,7 @@
         <div class="container text-center">
             <h1 class="display 3">PRODUK</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, aperiam.
+                Produk-Produk Saos WIBU
             </p>
             <div class="row pt-4">
                 <div class="col-md-3">
